# lem

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: lem-refine.md
desktop/: electron.vite.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
desktop/resources/: icon.icns
docs/: configuration.md  development.md  electron-design-system.md  profiles.md  quickstart.md
docs/adr/: ADR-0001-electron-ui-architecture.md
docs/future-work/: dynamic-intake.md
docs/reviews/: SYNTHESIS.md  ai-production.md  architect.md  prompt-engineer.md
docs/superpowers/: agent-prompt.md
process_roles/: branch-skeptic.md  cross-skeptic.md  disagreement-detector.md  distiller.md  frame-shifter.md  jtbd-extractor.md  kill-case-skeptic.md  pruner.md  synthesizer.md
profiles/app-idea/: intake-prompt.md  profile.yaml
src/lem/: __init__.py  auth.py  branch_label.py  cli.py  control.py  daemon.py  hooks.py  install_agents.py  intake.py  notify.py  orchestrator.py  paths.py  phases.py  post_synthesis.py  profile.py  types.py
tests/: __init__.py  test_version.py
tests/e2e/: __init__.py  test_live_smoke.py  test_stub_pipeline.py
tests/integration/: __init__.py  test_daemon.py  test_lifecycle_cmds.py  test_orchestrator_stub.py  test_read_cmds.py  test_refine_cmd.py  test_render.py  test_slash_command.py  test_tui_controls.py  test_tui_drilldown.py  test_tui_main.py
tests/unit/: __init__.py  test_branch_label.py  test_breaker.py  test_cost.py  (+25 more)
(+189 files in other folders)
