[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lem"
version = "0.0.1"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "textual>=0.80",
    "rich>=13.7",
]

[project.scripts]
lem = "lem.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lem"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["src"]
